# Cirrus

./: .gitignore  CMakeLists.txt  README.md  Setup.bat  Setup.sh  build.bat  build.py  build.sh  conanfile.txt  premake5.lua  requirements.txt
include/: HelloTriangle.h
src/: HelloTriangle.cpp  main.cpp
